# bubbles

./: README.md  bubbles.pro  coordscalculator.cpp  coordscalculator.h  locker.h  main.cpp  mainwindow.cpp  mainwindow.h  testshapes.h
bubblesTest/: CMakeLists.txt  bubblesTest.pro  coordscalculator_test.cpp  tst_bubblestesttest.cpp
build-bubblesTest-qtcmake-По умолчанию/: CMakeCache.txt  Makefile  bubbles-test  bubbles-test.cbp  cmake_install.cmake
build-bubblesTest-qtcmake-По умолчанию/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  googletest-distribution.cbp
build-bubblesTest-qtcmake-По умолчанию/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock.cbp
build-bubblesTest-qtcmake-По умолчанию/googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
calculator/: coordscalculator.cpp  coordscalculator.h
container/: threadsafeset.cpp  threadsafeset.h  threadsafevector.h
graphics/: bubblegraphicsitem.cpp  bubblegraphicsitem.h  bubblescene.cpp  bubblescene.h
src/: bubble.h  main.cpp  mainwindow.cpp  mainwindow.h  point.h
src/calculator/: coordscalculator.cpp  coordscalculator.h  movementcalculator.h
src/graphics/: bubblegraphicsitem.h  bubblescene.cpp  bubblescene.h
